--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,22 +14,28 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggsave)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_fill_brewer)
+importFrom(ggplot2,scale_fill_distiller)
+importFrom(ggplot2,scale_size_continuous)
 importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,theme)
+importFrom(grid,unit)
 importFrom(gridExtra,marrangeGrob)
 importFrom(readr,write_csv)
 importFrom(readr,write_csv2)
 importFrom(readr,write_delim)
 importFrom(stats,chisq.test)
 importFrom(stats,cor.test)
+importFrom(tidyselect,all_of)
 importFrom(tidyselect,everything)
