Added function omix_specific()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(omix_corr)
 export(omix_cv)
 export(omix_rand)
 export(omix_sheet)
+export(omix_specific)
 import(magrittr)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
