--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,ungroup)
+importFrom(forcats,as_factor)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_equal)
 importFrom(ggplot2,element_blank)
@@ -22,6 +23,7 @@ importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggplotGrob)
 importFrom(ggplot2,ggsave)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_fill_brewer)
