--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: Omixer
 Type: Package
 Title: Randomize Samples for -omics Profiling
-Version: 0.1.0
+Version: 0.99.0
 Author: Lucy Sinke
 Maintainer: Lucy Sinke <l.j.sinke@lumc.nl>
 Description: Optimizes distribution of randomization variables to 
-    minimize correlations between them and technical covariates.
+    minimize correlations with technical covariates.
     Also allows the production of PDF sample sheets for easy
     manual pipetting of samples in the lab.
 License: MIT + file LICENSE
@@ -16,17 +16,22 @@ Imports:
     ggplot2,
     forcats,
     tibble,
-    stringr,
     here,
     gridExtra,
     magrittr,
     readr,
-    tidyselect
+    tidyselect,
+    grid,
+    stats,
+    stringr
 Depends: R (>= 4.0.0)
 RoxygenNote: 7.1.0
 Suggests: 
     knitr,
     rmarkdown,
     BiocStyle,
-    magick
+    magick,
+    testthat
 VignetteBuilder: knitr
+biocViews: DataRepresentation, ExperimentalDesign, QualityControl, Software, Visualization
+BugReports: https://github.com/molepi/Omixer/issues
