--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,12 @@ export(omixerRand)
 export(omixerSheet)
 export(omixerSpecific)
 import(dplyr)
+import(forcats)
 import(ggplot2)
+import(here)
 import(magrittr)
+import(stringr)
+import(tibble)
 importFrom(dplyr,filter)
 importFrom(dplyr,select)
 importFrom(forcats,as_factor)
