--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: Omixer
 Type: Package
-Title: Randomize Samples for -omics Profiling
-Version: 0.99.5
+Title: Omixer: multivariate and reproducible randomization to proactively 
+    counter batch effects in omics studies
+Version: 0.99.7
 Authors@R: person("Lucy", "Sinke", 
     email="l.j.sinke@lumc.nl", role=c("cre", "aut"))
-Description: Omixer - an R package for multivariate and reproducible 
-    randomization with lab-friendly sample layouts. Omixer ensures optimal 
-    sample distribution across batches with well-documented methods, and 
-    can output intuitive sample sheets for the wet lab if needed. 
+Description: Omixer - an Bioconductor package for multivariate and 
+    reproducible randomization, which ensures optimal sample distribution 
+    across batches with well-documented methods. It outputs lab-friendly 
+    sample layouts, reducing the risk of sample mixups when manually pipetting 
+    randomized samples. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -24,7 +26,7 @@ Imports:
     stats,
     stringr
 Depends: R (>= 4.0.0)
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Suggests: 
     knitr,
     rmarkdown,
